Added sources to the text

--- a/kapitel/einleitung/einleitung.tex
+++ b/kapitel/einleitung/einleitung.tex
@@ -7,13 +7,13 @@ Verbesserungen sind jederzeit willkommen.
 
 \subsection{Objective}
 Kleiner Reminder für mich in Bezug auf die Dinge, die wir bei der Thesis beachten sollten und \LaTeX{}
--Vorlage für die Thesis.\autocite{syedQuestionAnsweringChatbot2021}
+-Vorlage für die Thesis.
 
 \subsection{Structure of the Paper}
-Kapitel~\ref{infos}
+Kapitel~\ref{fundamentals}
 enthält die Inhalte des Thesis-Days und alles, was zum inhaltlichen erstellen der Thesis relevant sein könnte.
 In
-Kapitel~\ref{latexDetails}~\nameref{latexDetails} findet ihr wichtige Anmerkungen zu \LaTeX{}
+Kapitel~\ref{requirementengineering}~\nameref{requirementengineering} findet ihr wichtige Anmerkungen zu \LaTeX{}
 , wobei die wirklich wichtigen Dinge im Quelltext dieses Dokumentes stehen (siehe auch die Verzeichnisstruktur in
 Abbildung.
 
@@ -24,11 +24,8 @@ software solutions, particularly when developing a chatbot designed to understan
 The project presented in this bachelor’s thesis involves the creation of a chatbot that leverages Natural Language
 Processing (NLP) to interpret customer inquiries and match them with relevant items from a supplier catalog.
 To achieve
-this, the backend relies on Python and Haystack, while the frontend utilizes Vue and Vuetify, and the deployment is
+this, the backend relies on Python and Haystack, while the frontend utilizes Vue, and the deployment is
 managed through containerization and orchestration technologies like Docker and Kubernetes.
-
-
-
 
 \subsubsection{Backend Technologies}
 
@@ -36,25 +33,27 @@ managed through containerization and orchestration technologies like Docker and 
 
 Python serves as the backbone of the application due to its extensive ecosystem and its ability to seamlessly integrate
 various libraries and frameworks that facilitate rapid prototyping and the development of complex data-driven
-functionalities. Its prominence in the fields of machine learning and data science makes it an ideal choice for
-implementing a chatbot that requires advanced natural language understanding (NLU) capabilities. Specifically, Python's
-compatibility with NLP frameworks like Haystack ensures that the chatbot can parse user inputs and perform context-aware
-semantic searches. This capability is crucial for accurately interpreting customer needs and mapping them to appropriate
-products or services in the supplier catalog.
+functionalities.\autocite[cf.][p. 12]{shrivastavaDesignImplementationChatbot}
+\autocite[cf.][pp. 240-241]{christensenPythonPipelineRapid2022} Its prominence in the fields of machine
+learning and data science makes it an ideal choice for implementing a chatbot that requires advanced Natural Language
+Understanding (NLU) capabilities.\autocite[cf.][p. 1]{lortiePythonModernData2022}\autocite[cf.][p. 85]{joshiOverviewPythonLibraries}
+Specifically, Python's compatibility with NLP frameworks like Haystack and many libraries ensures that
+the chatbot can parse user inputs and perform context-aware semantic searches.\autocite[cf.][p. 21]{fareezPOPULARPYTHONLIBRARIES2020}
+This capability is crucial for accurately interpreting customer needs and mapping them to appropriate products or services in the supplier catalog.
 
 The integration of Haystack within this project serves as a cornerstone for the development of an intelligent,
 search-driven chatbot, which is designed to address the intricate nature of customer inquiries. Haystack, a robust
 open-source Natural Language Processing (NLP) framework, employs a sophisticated Reader-Retriever architecture that
 harmonizes the capabilities of both information retrieval and deep semantic understanding. This dual approach
 capitalizes on advanced NLP methodologies to enhance the chatbot’s performance in extracting pertinent information from
-extensive datasets\parencite[cf.][p.236]{krishnamoorthyEvolutionReadingComprehension2021}.
+extensive datasets\autocite[cf.][p. 236]{krishnamoorthyEvolutionReadingComprehension2021}.
 
 Notably, rather than utilizing the standard BERT model, this implementation leverages OpenAI’s GPT-4 model within the
 Haystack framework. This allows the system to engage in nuanced contextual interpretation, thereby significantly
 improving the precision of semantic searches. The choice of GPT-4 is particularly advantageous in question-answering
 scenarios, as it allows the chatbot to comprehend the subtleties of customer queries and generate responses that are not
 only contextually relevant but also demonstrate a high degree of language understanding
-\autocite[cf.][p.943-944]{syedQuestionAnsweringChatbot2021}.
+\autocite[cf.][pp. 943-944]{syedQuestionAnsweringChatbot2021}.
 
 Moreover, Haystack’s modular architecture and extensible Application Programming Interfaces (APIs) offer a high degree
 of flexibility, facilitating seamless integration within the chatbot’s overall architecture. This ensures that the
@@ -63,73 +62,62 @@ Consequently, Haystack’s inclusion in the technical stack is not merely contri
 capabilities but also establishes a solid foundation for prospective advancements and refinements in the chatbot’s
 functional repertoire.
 
-
-
-
 \subsubsubsection{PostgreSQL}
 
-The backend system also incorporates PostgreSQL as its database solution.
-PostgreSQL’s support for complex queries and
+The backend system also incorporates PostgreSQL as its database solution. PostgreSQL’s support for complex queries and
 its capability to handle structured data are essential for managing and accessing the supplier information and product
-details stored within the system.
+details stored within the system.\autocite[cf.][pp. 23-24]{abbasiAdaptiveScalableDatabase2024}
 The integration of PostgreSQL ensures that the chatbot can quickly and efficiently
 retrieve the necessary data, thereby reducing latency and enhancing the overall user experience.
 
 \subsubsubsection{Monitoring and Observability}
 
 For monitoring and observability, the project employs Langfuse and OpenTelemetry, which provide comprehensive tracing
-and metrics collection across the microservices architecture.
+and metrics collection across the microservices architecture.\autocite[cf.][p. 15014]{thakurReviewOpentelemetryHTTP2022}
 This is particularly relevant given the experimental
 nature of the prototype, where understanding system performance and identifying potential bottlenecks are crucial for
-iterative development and refinement.
-By utilizing these tools, the project gains valuable insights into the behavior of
+iterative development and refinement. By utilizing these tools, the project gains valuable insights into the behavior of
 the chatbot, allowing for continuous improvement and optimization.
 
 \subsubsubsection{FastAPI and uv}
 
 FastAPI serves as the web framework for the backend, offering a high-performance environment that supports asynchronous
-programming.
+programming.\autocite[cf.][p. 9]{chenModelAlgorithmResearch2023}
 This choice is particularly relevant for the chatbot, as it enables handling multiple concurrent requests
 with minimal overhead, ensuring that the application remains responsive even under heavy loads.
-The project also
-leverages the \texttt{uv} package for dependency management and deployment configuration. \texttt{uv}
+
+The project also leverages the \texttt{uv} package for dependency management and deployment configuration. \texttt{uv}
 simplifies the process of configuring Python dependencies and allows for a smoother deployment process by ensuring
 compatibility and consistency between various package versions.
+\autocite[cf.][URL last accessed on 2024-10-05]{canorodriguezPythonPackagingGreat2024}
 
-\subsubsection{Frontend Technologies}
+\subsubsection{Frontend Technologie}
 
 On the frontend, Vue.js and Vuetify are utilized to create an intuitive and responsive user interface.
-The decision to
-use Vue.js stems from its reactive nature and modular architecture, which align with the need for a maintainable and
-easily extensible codebase.
-Vuetify complements Vue.js by providing a set of pre-built components that adhere to
-material design principles, ensuring that the user interface is both visually appealing and functionally consistent.
-This combination is particularly effective for developing a chatbot interface that needs to present complex data in an
-accessible manner, while also allowing for dynamic updates based on user interactions.
+The decision to use Vue.js stems from its reactive nature and modular architecture, which align with the need for a
+maintainable and easily extensible codebase.\autocite[cf.][p. 268]{kaluzaComparisonFrontendFrameworks2018}
+\autocite[cf.][pp. 1-2]{liResearchSinglePage2021} It is effective for developing a chatbot interface that needs to present
+complex data in an accessible manner, while also allowing for dynamic updates based on user interactions.
+\autocite[cf.][p. 493]{mokogintaDevelopingModernJavaScript2024}
 
 \subsubsection{Deployment and Infrastructure Management}
 
 Deployment is managed through a combination of Docker, Kubernetes, and Terraform.
-Docker’s role in containerizing the
-application ensures that the entire software stack can be encapsulated and deployed consistently across various
-environments.
-This is essential for a project like this, where different iterations of the prototype may need to be
-tested in different setups.
-Kubernetes, in turn, provides the orchestration needed to manage these containers, allowing
-for automated scaling and high availability.
-The use of Terraform as an infrastructure-as-code tool ensures that cloud
-resources can be provisioned and managed efficiently, providing a stable and reproducible deployment environment.
+Docker’s role in containerizing the application ensures that the entire software stack can be encapsulated and deployed
+consistently across various environments.\autocite[cf.][p. 191]{openjaStudyingPracticesDeploying2022} This is essential
+for a project like this, where different iterations of the prototype may need to be tested in different setups.
+Kubernetes, in turn, provides the orchestration needed to manage these containers, allowing for automated scaling and
+high availability.\autocite[cf.][pp. 2,7-8]{carrionKubernetesSchedulingTaxonomy2022} The use of Terraform as an
+infrastructure-as-code (IaC) tool ensures that cloud resources can be provisioned and managed efficiently, providing a
+stable and reproducible deployment environment.\autocite[cf.][p. 24]{n.EvaluatingDevopsTools2023}
 
 \vspace{1cm}
 
 In summary, each component of the technical stack has been carefully selected to meet the unique requirements of the
 chatbot project.\ The combination of Python and Haystack provides robust NLP capabilities for understanding and
-processing user inputs, while FastAPI support real-time interactions.
-PostgreSQL ensures efficient data
-management, and Langfuse and OpenTelemetry offer the necessary monitoring tools.
-On the frontend, Vue.js and Vuetify deliver a responsive and interactive user interface, and the deployment stack,
-comprised of Docker, Kubernetes, and
-Terraform, guarantees scalability and reliability.
-This cohesive selection of technologies forms a solid foundation for the development of a chatbot that not only meets
-the functional requirements but also adheres to best practices in
-software engineering.
+processing user inputs, while FastAPI support real-time interactions. PostgreSQL ensures efficient data management,
+and Langfuse and OpenTelemetry offer the necessary monitoring tools. On the frontend, Vue.js and Vuetify deliver a
+responsive and interactive user interface, and the deployment stack, comprised of Docker, Kubernetes, and Terraform,
+guarantees scalability and reliability. This cohesive selection of technologies forms a solid foundation for the
+development of a chatbot that not only meets the functional requirements but also adheres to best practices in software
+engineering.
